# Python-Text-Data-Clean

./: LICENSE  README.md  pyproject.toml  setup.cfg
py_text_data_clean/pytextdataclean/: textclean.py
