[metadata]
name = py_text_data_clean
version = 0.0.4
author = Sandeep Panchal
author_email = sandeep.panchal545@gmail.com
description = Text Data Cleaning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sandeep-Panchal/Python-Text-Data-Clean
project_urls =
    Bug Tracker = https://github.com/Sandeep-Panchal/Python-Text-Data-Clean/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

keywords = "text data clean"

[options]
package_dir =
    = py_text_data_clean
packages = find:
python_requires = >=3

[options.packages.find]
where = py_text_data_clean